--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ h1 {
 h2 {
     font-family: 'Playfair Display', sans-serif;
     font-weight: 700;
-    color:  #D4AF37; /*#424242;*/
+    color:  #D4AF37;
 }
 
 
@@ -89,8 +89,8 @@ h3 {
 
 .nav-logo h1 {
     font-size: 2.7rem;
-    color: #bf9011; /*#c4a85c; var (--secondary-color);(--accent-color) (--primary-color);*/
-    font-family: "Edwardian Script ITC", cursive;    /*'Playfair Display', serif;*/
+    color: #bf9011;
+    font-family: "Edwardian Script ITC", cursive;
 }
 
 .nav-menu {
@@ -184,7 +184,7 @@ h3 {
 .hero-content p {
     font-size: 1.2rem;
     color: var(--text-light);
-    line-height: 1.2; /* убрать строку полностью для автоматической высоты строки */
+    line-height: 1.2;
     max-width: 600px;
     margin: 0 auto;
 }
@@ -192,7 +192,7 @@ h3 {
 /* Gallery Section */
 .gallery-section {
     padding: 1rem 0;
-    background: #c4c3c2; /*added,  #b3b2af #9c9b9a темно сер */
+    background: #c4c3c2;
 }
 
 .gallery-header {
@@ -241,7 +241,7 @@ h3 {
 .mosaic-view {
     display: none;
     columns: 4;
-    column-gap: 5px; /* 10px; 20px;*/
+    column-gap: 5px;
 }
 
 .mosaic-view.active {
@@ -250,7 +250,7 @@ h3 {
 
 .artwork-item {
     break-inside: avoid;
-    margin-bottom: 5px; /* 10px; 20px;*/
+    margin-bottom: 5px;
     cursor: pointer;
     transition: var(--transition);
 }
@@ -260,7 +260,7 @@ h3 {
     overflow: hidden;
     border-radius: 8px;
     box-shadow: var(--shadow);
-    border: 5px solid var(--frame-color); /* 8px*/
+    border: 5px solid var(--frame-color);
     background: var(--frame-color);
     transition: var(--transition);
 }
@@ -429,7 +429,6 @@ h3 {
     overflow: hidden;
     border-radius: 10px;
     box-shadow: var(--shadow-hover);
-    /*background: gray;*/
     padding: 20px;
     display: flex;
     justify-content: center;
@@ -451,14 +450,11 @@ h3 {
 .zoom-controls {
     position: absolute;
     top: 0px;
-    /*right: 20px;*/
-    /*left: 20px;*/
     display: flex;
     gap: 10px;
 }
 
 .zoom-btn {
-    *background: rgba(0,0,0,0.7);*
     color: white;
     border: none;
     
@@ -468,7 +464,7 @@ h3 {
     cursor: pointer;
     font-size: 0.7rem;
     font-weight: bold;
-    font-color: rgba(0,0,0,0.7);
+    color: rgba(0,0,0,0.7);
     transition: var(--transition);
 }
 
@@ -908,7 +904,7 @@ html {
     overflow: hidden;
     font-family: 'Inter', sans-serif;
     font-size: 0.8rem;
-    font-color: #d0d0d0;
+    color: #d0d0d0;
 }
 
 
