--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,9 @@ h3 {
     background: var(--primary-color);
     margin: 3px 0;
     transition: var(--transition);
-}/* Hero Section */
+}
+
+/* Hero Section */
 .hero {
     min-height: 30vh;
     display: flex;
@@ -149,7 +151,7 @@ h3 {
     padding-top: 90px;
     text-align: center;
     position: relative;
-    background-image: url("images/hero-background.jpg");
+    background-image: url("hero-background.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -311,6 +313,7 @@ h3 {
 
 .artwork-overlay h3 {
     font-size: 1.2rem;
+    color: white;
     margin-bottom: 0.5rem;
 }
 
@@ -587,7 +590,8 @@ h3 {
 .artwork-navigation {
     display: flex;
     justify-content: space-between;
-    margin-top: 3rem;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 .nav-artwork {
@@ -1110,7 +1114,6 @@ html {
         font-size: 1.0rem;
     }
 }
-}
 
 @media screen and (max-width: 480px) {
     .hero {
@@ -1144,7 +1147,7 @@ html {
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
     .hero {
         /* You can specify a higher resolution image here if available */
-        /* background-image: url('images/hero-background@2x.jpg'); */
+        /* background-image: url('hero-background@2x.jpg'); */
     }
 }
 
