--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,7 @@ h3 {
     padding-top: 90px;
     text-align: center;
     position: relative;
-    background-image: url("/hero-background.jpg");
+    background-image: url("hero-background.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
